    - Move your units to "from" CC, indicated by green outline
    - Active CC scans player units to teleport every 15 seconds. 24 units per batch. Up to 96 units per minute.
    - ----- End Teleportation Framework -----
    - ----- End Player Army Frameworks -----
    - Added post process package for some indexes. Requires "Enemy Race Manager - Post Process" package.
    - Add barrel > steele plate recipe for furnace. Rewards may return liquid barrels. You can use this recipe to recycle.


  Graphics:
    - Added new graphics for explosions and attack effects. Requires "Enemy Race Manager Asset Pack" package.

  Sounds:
    - Added "max population" sound effect
    - Added "force under attack" when player unit dies.
    - Added "base under attack" to replace default alert.

  Changes:
    - When a custom attack squad completes an attack command, it will pick a new attack area. Instead of converting to automatic group.
    - Level up check now runs every 10 mins, not configurable.
    - When boss is active, Leveling up is halt until boss mode end.
    - Refactored custom attack handler to reduce remote calls.
    - Refactored GUI handlers.
    - Killing units / turrets now always count toward evolution points.
    - Tweaked base expansion formation number.
    - Tweaked unit group will not slow down to wait members. Slow members run double speed to catch up.
    - When a unit group marks as always angry, they will always be distracted by anything.
    - Most reinforced item with lower than 1000HP have buffed to around 900 - 1000 HP. Except express belt, which stay at 680.
    - Added reinforced substation with 1000 HP.
    - Reinforced inserters and power poles, substations are now military targets.


---------------------------------------------------------------------------------------------------
Version: 1.15.5
Date: 2022-09-02

  Bugfixes:
    - Yet another attempt to fix high level units escaping the level processor in early game.