@@ -133,19 +133,3 @@ if settings.startup['enemyracemanager-enhance-defense'].value == true then
     data.raw['logistic-robot']['logistic-robot']['resistances'] = armor_change_resistance(75, 0)
     data.raw['logistic-robot']['logistic-robot']['resistances'][4]['percent'] = 100
 end
-
-if settings.startup['enemyracemanager-free-for-all'].value then
-    for _, types in pairs(data.raw) do
-        for _, entity in pairs(types) do
-            if type(entity) == 'table' and entity.max_health and (entity.subgroup == nil or string.find(entity.subgroup, 'enemies') == nil) then
-                entity.max_health = entity.max_health * ErmConfig.FFA_MULTIPLIER * 1.25
-
-                if  entity.repair_speed_modifier then
-                    entity.repair_speed_modifier = entity.repair_speed_modifier * ErmConfig.FFA_MULTIPLIER
-                else
-                    entity.repair_speed_modifier = 1 * ErmConfig.FFA_MULTIPLIER
-                end
-            end
-        end
-    end
-end
